feat(auth): Add update endpoint to swagger
- clean up openapi
