# src/entities/Task.ts
@@ -2,6 +2,6 @@ export type Task = {
   id: number;
   title: string;
   description?: string;
-  completed?: boolean;
+  completed?: number;
   userId: string;
 };
